--- a/sell.html
+++ b/sell.html
@@ -553,7 +553,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6">
           <div class="zubuz-hero-content">
-            <h1>Thinking of Sell Your Trail Book?</h1>
+            <h1>Thinking of Selling Your Trail Book?</h1>
             <p class="tagline">Skip the Games. Get What It's Worth.</p>
             <p>
               Get a valuation in 24 hours. Access pre-funded buyers. No
@@ -594,7 +594,7 @@
             <div class="icon">
               <i class="far fa-thumbs-down"></i>
             </div>
-            <p>Lowball offers that don't reflect your work</p>
+            <p>Lowball offers that ignore years of hard work</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
@@ -602,7 +602,7 @@
             <div class="icon">
               <i class="far fa-question-circle"></i>
             </div>
-            <p>Buyers who ask endless questions then disappear</p>
+            <p>Tyre-kickers who waste your time then ghost</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
@@ -648,7 +648,7 @@
             <h3>Pre-Funded Buyers</h3>
             <p>
               We only connect you with buyers who already have financing
-              approved. No dreamers.
+              approved. No dreamers. No maybes.
             </p>
           </div>
         </div>
@@ -742,8 +742,7 @@
               </li>
               <li>
                 <i class="fas fa-comments"></i>
-                <span><strong>Honest</strong> - straight answers, no sales
-                  pitch</span>
+                <span><strong>Honest</strong> - we'll tell you if selling doesn't make sense</span>
               </li>
             </ul>
           </div>
