--- a/packs/model.html
+++ b/packs/model.html
@@ -107,7 +107,7 @@
             <nav class="navbar site-navbar">
                 <!-- Brand Logo-->
                 <div class="brand-logo">
-                    <a href="index.html">
+                    <a href="/">
                         <img src="../assets/images/logo/logo-dark.png" alt="" class="light-version-logo" />
                     </a>
                 </div>
