--- a/start.html
+++ b/start.html
@@ -141,7 +141,7 @@
         <nav class="navbar site-navbar">
           <!-- Brand Logo-->
           <div class="brand-logo">
-            <a href="index.html">
+            <a href="/">
               <img
                 src="assets/images/logo/logo-dark.png"
                 alt=""
