--- a/terms.html
+++ b/terms.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="canonical" href="https://www.cocredit.com.au/terms.html" />
   <!-- Meta Pixel Code -->
   <script>
     !(function (f, b, e, v, n, t, s) {
@@ -108,7 +109,7 @@
       <nav class="navbar site-navbar">
         <!-- Brand Logo-->
         <div class="brand-logo">
-          <a href="index.html">
+          <a href="/">
             <img src="assets/images/logo/logo-white.png" alt="" class="light-version-logo" />
           </a>
         </div>
